# awkupy

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
awkupy/: __init__.py  _version.py  awk.py  base.py  kernel.py  kernelspec.json  prompt.py
doc/examples/: coins.txt  coins_histogram.awk  coins_histogram.ipynb  coins_histogram.py  output.txt  tutorial.ipynb
iawk/: __init__.py
src/awkupy/: _version.py  base.py  prompt.py
src/iawk/: __main__.py
tests/: test_api.py  test_ipython_magic.py
