[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@protonmail.com
name = awkupy
version = attr: awkupy.__version__
keywords = awk, iawk, cli, IPython, Jupyter
description= A simple Python interface and IPython/Jupyter magic for AWK
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Text Processing
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Natural Language :: English
        Programming Language :: Python :: 3
url = https://github.com/ashwinvis/awkupy
include_package_data = True
zip_safe = True

[options]
install_requires =
    ipython>=6.0
    typing; python_version < "3.6"
    dataclasses; python_version < "3.7"
package_dir=
    =src
packages=find:


[options.entry_points]
console_scripts =
    iawk = iawk.__main__:main

[options.packages.find]
where=src
exclude =
    docs
    tests
